<resources>
    <string name="app_name">Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_to_select_room">К выбору номера</string>
    <string name="tv_about_hotel">Об отеле</string>
    <string name="tv_comfort">Удобства</string>
    <string name="tv_most_necessary">Самое необходимое</string>
    <string name="tv_what_included">Что включено</string>
    <string name="tv_what_unincluded">Что не включено</string>
    <string name="toolbar_hotel">Отель</string>
    <string name="btn_select_room">Выбрать номер</string>
    <string name="tv_from_price">"от "</string>
    <string name="tv_booking">Бронирование</string>
    <string name="btn_choose_room">Выбрать номер</string>
    <string name="tv_departure">Вылет из</string>
    <string name="tv_country_city">Страна, город</string>
    <string name="tv_date">Даты</string>
    <string name="tv_number_night">Кол-во ночей</string>
    <string name="tv_hotel_name">Отель</string>
    <string name="tv_room">Номер</string>
    <string name="tv_nutrition">Питание</string>
    <string name="photo_hotel">Фото отеля</string>
    <string name="button_back">Кнопка назад</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_email">Почта</string>
    <string name="data_nobody_pass">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="tv_customer_info">Информация о покупателе</string>
    <string name="chip_about_room">Подробнее о номере</string>
    <string name="hint_name">Имя</string>
    <string name="hint_second_name">Фамилия</string>
    <string name="hint_birthday">Дата рождения</string>
    <string name="hint_nationality">Гражданство</string>
    <string name="hint_passport">Номер загранпаспорта</string>
    <string name="hint_passport_validity">Срок действия закранпаспорта</string>
    <string name="tv_add_tourist">Добавить туриста</string>
    <string name="tv_tour_price">Тур</string>
    <string name="tv_fuel_charge">Топливный сбор</string>
    <string name="tv_service_charge">Сервисный сбор</string>
    <string name="tv_pay">К оплате</string>
    <string name="tv_verification_order">Подтверждение заказа №%d может занять некоторое время (от 1 часа до суток).\nКак только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="tv_order_in_processed">Ваш заказ принят в работу</string>
    <string name="tv_super">Супер!</string>
    <string name="iv_confetti">Конфетти</string>
    <string name="tv_hotel_price">от %s ₽</string>
    <string name="room_price">%s ₽</string>
    <string name="hotel_score">%d %s</string>
    <string name="tv_dates">%s - %s</string>
    <string name="booking_price">%d ₽</string>
    <string name="tv_tourist_count">%s турист</string>
    <string name="btn_total_pay">Оплатить %d ₽</string>
    <string name="tv_order_paid">Заказ оплачен</string>
    <string name="tv_number_nights">%d ночей</string>
</resources>