<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mStyleLayout"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="7">

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/tv_departure"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/tv_country_city"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/tv_date"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/tv_number_night"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/tv_hotel_name"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/tv_room"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/tv_nutrition"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="0"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="1"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="2"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="3"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="4"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="5"
        tools:text="Info info info info info"/>

    <TextView
        style="@style/mStylePriseDescription.mStyleColumnFirst.mStyleColumnSecond"
        android:layout_column="1"
        android:layout_row="6"
        tools:text="Info info info info info"/>
</GridLayout>