<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mStyleCards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        style="@style/mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/tv_tour_price"/>

    <TextView
        style="@style/mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/tv_fuel_charge"/>

    <TextView
        style="@style/mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/tv_service_charge"/>

    <TextView
        style="@style/mStyleColumnFirst"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/tv_pay"/>

    <TextView
        style="@style/mStyleColumnSecondPrice"
        android:layout_column="1"
        android:layout_row="0"
        tools:text="1 000 000 ₽"/>

    <TextView
        style="@style/mStyleColumnSecondPrice"
        android:layout_column="1"
        android:layout_row="1"
        tools:text="1 000 000 ₽"/>

    <TextView
        style="@style/mStyleColumnSecondPrice"
        android:layout_column="1"
        android:layout_row="2"
        tools:text="1 000 000 ₽"/>

    <TextView
        style="@style/mStyleColumnSecondPrice"
        android:layout_column="1"
        android:layout_row="3"
        tools:text="1 000 000 ₽"/>

</GridLayout>