<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mStyleCards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/mStyleTitleNameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_customer_info" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="+7 (951) 555-99-00" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="examplemail.000@mail.ru" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/mStyleSmallDescription"
        android:text="@string/data_nobody_pass"
        />
</LinearLayout>