<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mStyleCards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tourist_number"
            style="@style/mStyleTouristTitle"
            android:text="@string/tv_tourist_count" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_open_tourist"
            style="@style/mStyleChipTouristOpen" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Иван" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_second_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_second_name"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Иванов" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthday"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_nationality">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nationality"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_passport">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_passport_validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_passport_validity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport_validity"
            style="@style/mStyleTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>