<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolBar_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_btn_order_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_back"
            app:srcCompat="@drawable/ic_back_toolbar" />

        <TextView
            android:id="@+id/tv_toolBar"
            style="@style/mStyleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_order_paid" />
    </Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar_booking"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        style="@style/mStyleLineView"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/button_container"
        style="@style/mStyleButtonContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_ok"
            style="@style/mStyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_super" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/iv_confetti" />

    <TextView
        android:id="@+id/textView2"
        style="@style/mStyleTitleNameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_order_in_processed"
        app:layout_constraintBottom_toTopOf="@+id/tv_verification_order"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_verification_order"
        style="@style/mStylePriseDescription"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:text="@string/tv_verification_order"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>