<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolBar_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_btn_booking_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back_toolbar"
            android:contentDescription="@string/button_back" />

        <TextView
            android:id="@+id/tv_toolBar"
            style="@style/mStyleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_booking" />
    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_booking"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar_booking" />

    <FrameLayout
        android:id="@+id/button_container"
        style="@style/mStyleButtonContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_select_room"
            style="@style/mStyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_total_pay" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>