<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_about_hotel"/>

    <TextView
        android:id="@+id/tv_description_1"
        style="@style/Text16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        tools:text="3-th line" />

    <TextView
        android:id="@+id/tv_description_2"
        style="@style/Text16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        tools:text="not free wi-fi" />

    <TextView
        android:id="@+id/tv_description_3"
        style="@style/Text16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        tools:text="30 km to airport" />

    <TextView
        android:id="@+id/tv_description_4"
        style="@style/Text16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        tools:text="1234567" />

    <TextView
        android:id="@+id/tv_big_description"
        style="@style/Text16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_3"
        tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/tv_big_description"
        app:layout_constraintStart_toStartOf="@+id/tv_big_description"
        app:layout_constraintTop_toBottomOf="@id/tv_big_description">

        <TextView
            android:id="@+id/tv1"
            style="@style/Text16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/tv_comfort"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            style="@style/Text14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_most_necessary"
            app:layout_constraintStart_toStartOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv3"
            style="@style/Text16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_what_included"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv4"
            style="@style/Text14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_most_necessary"
            app:layout_constraintStart_toStartOf="@+id/tv3"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv4"
            app:layout_constraintTop_toBottomOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv5"
            style="@style/Text16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_what_unincluded"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/tv6"
            style="@style/Text14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_most_necessary"
            app:layout_constraintStart_toStartOf="@+id/tv5"
            app:layout_constraintTop_toBottomOf="@+id/tv5" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv1"
            app:srcCompat="@drawable/emoji_happy" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv3"
            app:srcCompat="@drawable/tick_square" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv6"
            app:layout_constraintEnd_toStartOf="@+id/tv5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv5"
            app:srcCompat="@drawable/close_square" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv1"
            app:srcCompat="@drawable/vector_55" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv3"
            app:srcCompat="@drawable/vector_55" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv5"
            app:srcCompat="@drawable/vector_55" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>